# STEM

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .style.yapf  Author.md  CHANGELOG.md  CITATION.cff  Holten_reference_model.py  Holten_reference_model_old.py  Holten_rm.py  Holten_rm_1.py  ISSUES  LICENSE  LICENSE.md  MaterialParameters.json  NOTICE  ProjectParameters.json  README.md  Rail_uneveness_example.py  STEM_MISSING_STEPS.md  aaa  all dutch train types with specifications.xls  asd.py  build_pack.sh  codecov.yml  createGeometry.py  create_geometry.py  create_geometry_3D.py  create_geometry_by_python.py  create_geometry_by_txt.py  create_geometry_mesh_data.py  geometry_working_code.py  info.md  mesh_holten.py  new.py  plot_over_time.py  plots_over_time.py  points.txt  (+13 more)
.github/: CODEOWNERS
Ground_layers_Holten/: GD231254-SW-ALL.py  GD231254-SW01.py  GD231254-SW02.py  GD231254-SW03.py  MAP_location_sonderingen.py  Notes_ground  sonderingen_kaart.html
Holten_dir_length/: MaterialParameters_stage_1.json  ProjectParameters_stage_1.json  ProjectParameters_stage_2.json  json_output.json  set_moving_load_process_uvec_load_cloned_1.rest  set_moving_load_process_uvec_load_cloned_10.rest  set_moving_load_process_uvec_load_cloned_11.rest  set_moving_load_process_uvec_load_cloned_12.rest  set_moving_load_process_uvec_load_cloned_13.rest  set_moving_load_process_uvec_load_cloned_14.rest  set_moving_load_process_uvec_load_cloned_15.rest  set_moving_load_process_uvec_load_cloned_16.rest  set_moving_load_process_uvec_load_cloned_2.rest  set_moving_load_process_uvec_load_cloned_3.rest  set_moving_load_process_uvec_load_cloned_4.rest  set_moving_load_process_uvec_load_cloned_5.rest  set_moving_load_process_uvec_load_cloned_6.rest  set_moving_load_process_uvec_load_cloned_7.rest  set_moving_load_process_uvec_load_cloned_8.rest  set_moving_load_process_uvec_load_cloned_9.rest
Holten_rm/: MaterialParameters_stage_1.json  MaterialParameters_stage_2.json  ProjectParameters_stage_1.json  ProjectParameters_stage_2.json  set_moving_load_process_train_load_cloned_1.rest  set_moving_load_process_train_load_cloned_2.rest  set_moving_load_process_train_load_cloned_3.rest  set_moving_load_process_train_load_cloned_4.rest
Models_Holten/: Holten_Deltares.py  Holten_reference_model.py  Holten_reference_model_old.py
Schalkwijk_stem_version_1.2.40/: ProjectParameters_stage_2.json  json_output_N_solver_v1.2.4o_stage_2.json  set_moving_load_process_uvec_load_cloned_1.rest  set_moving_load_process_uvec_load_cloned_2.rest  set_moving_load_process_uvec_load_cloned_3.rest  set_moving_load_process_uvec_load_cloned_4.rest  set_moving_load_process_uvec_load_cloned_5.rest  set_moving_load_process_uvec_load_cloned_6.rest  set_moving_load_process_uvec_load_cloned_7.rest  set_moving_load_process_uvec_load_cloned_8.rest  set_multiple_moving_load_process_uvec_load.json  soft_stage_1.mdpa
Schalkwijk_stem_version_1.2.40_quadratic/: MaterialParameters_stage_2.json  ProjectParameters_stage_1.json  json_output_N_solver_v1.2.4o.json  json_output_N_solver_v1.2.4o_stage_2.json  set_moving_load_process_uvec_load_cloned_1.rest  (+8 more)
(+3985 files in other folders)
