[metadata]
name = STEM
version = attr: stem.__version__
author = attr: stem.__author__
description = STEM model
long_description = file: ReadMe.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: BSD 3
    Operating System :: Windows
	Operating System :: Unix
[options]
packages =
    stem
    stem.IO
include_package_data = True
install_requires =
    numpy>=1.24
    scipy>=1.10.1
    plotly>=5.15.0
    gmsh_utils @ git+https://github.com/StemVibrations/gmsh_utils@v1.0
    random_fields @ git+https://github.com/StemVibrations/RandomFields@v1.0
    StemKratos @ git+https://github.com/StemVibrations/StemKratos@v1.0
python_requires = >=3.9

[options.extras_require]
testing =
    pytest>=7.2
    pytest-cov>=4.0
    tox>=4.4
    mypy>=1.1
    beautifulsoup4>=4.12
    matplotlib>=3.7.4
docs =
    Sphinx==6.2.1
    sphinx-rtd-theme==1.2.2
