[metadata]
name = STEM-Vibrations
version = attr: stem.__version__
url = https://github.com/StemVibrations/STEM
author = STEM team
description = STEM model
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: Microsoft :: Windows
	Operating System :: Unix
[options]
packages =
    stem
    stem.IO
include_package_data = True
install_requires =
    numpy>=1.24
    scipy>=1.10.1
    plotly>=5.15.0
    gmsh_utils @ git+https://github.com/StemVibrations/gmsh_utils
    random_fields @ git+https://github.com/StemVibrations/RandomFields
    StemKratos @ git+https://github.com/StemVibrations/StemKratos
python_requires = >=3.9

[options.extras_require]
testing =
    pytest==7.4.2
    pytest-cov>=4.0
    tox>=4.4
    mypy>=1.1
    beautifulsoup4>=4.12
    matplotlib>=3.7.4
docs =
    Sphinx==6.2.1
    sphinx-rtd-theme==1.2.2