[metadata]
name = STEM-Vibrations
version = attr: stem.__version__
url = https://github.com/StemVibrations/STEM
author = STEM team
description = STEM model
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
[options]
packages =
    stem
    stem.IO
include_package_data = True
install_requires =
    numpy>=2.0.2
    scipy>=1.13.1
    plotly>=5.24.1
    gmsh_utils @ git+https://github.com/StemVibrations/gmsh_utils
    random_fields @ git+https://github.com/StemVibrations/RandomFields
    StemKratos @ git+https://github.com/StemVibrations/StemKratos
    UVEC @ git+https://github.com/StemVibrations/vehicle_models
python_requires = >=3.9, <3.12

[options.extras_require]
testing =
    pytest==7.4.2
    pytest-cov>=6.0
    tox>=4.23
    mypy>=1.13
    pre-commit==3.6.2
    yapf==0.43.0
    flake8==7.0.0
    beautifulsoup4>=4.12
    matplotlib>=3.9.3
docs =
    Sphinx==7.4.7
    sphinx-rtd-theme==3.0.2
    sphinxcontrib-bibtex==2.6.3
